Fix: /games/ route now redirects to /games/all if no query params given
